--- a/de.fsch.ibot.app/build.properties
+++ b/de.fsch.ibot.app/build.properties
@@ -1,6 +1,10 @@
-output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css,\
+               bin/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
+
